made ec2 instance naming uniform, made random number for ip rnage more precise, added security group to termination tasks, this causes a known issue: https://github.com/ansible/ansible/issues/11598

--- a/playbooks/aws/openshift-cluster/tasks/create_security_group.yml
+++ b/playbooks/aws/openshift-cluster/tasks/create_security_group.yml
@@ -6,7 +6,7 @@
 - name: Create security group for ose
   ec2_group:
     name: "{{ security_group }}"
-    description: ose traffic security group
+    description: "{{ security_group }}" 
     rules:
       - proto: tcp
         from_port: 80
