--- a/playbooks/aws/openshift-cluster/terminate.yml
+++ b/playbooks/aws/openshift-cluster/terminate.yml
@@ -82,3 +82,9 @@
           Name: "{{ item.item.item.ec2_tag_Name }}-terminate"
       with_items: ec2_stop.results
       when: ec2_stop | changed
+
+    - name: Remove security group
+      ec2_group:
+        name: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
+        description: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
+        state: absent
