--- a/playbooks/common/openshift-cluster/tasks/set_etcd_launch_facts.yml
+++ b/playbooks/common/openshift-cluster/tasks/set_etcd_launch_facts.yml
@@ -3,7 +3,7 @@
 
 - name: Generate etcd instance names(s)
   set_fact:
-    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' | format(1048576 | random) }}"
+    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ item }}"
   register: etcd_names_output
   with_sequence: count={{ num_etcd }}
 
@@ -14,7 +14,7 @@
 
 - name: Generate etcd instance private ips·
   set_fact:
-    scratch_name: "{{ private_subnet }}.{{ 255 | random }}" 
+    scratch_name: "{{ private_subnet }}.{{ 255 | random(1,1) }}" 
   register: etcd_ips_output
   with_sequence: count={{ num_etcd }}
 
