--- a/playbooks/common/openshift-cluster/update_repos_and_packages.yml
+++ b/playbooks/common/openshift-cluster/update_repos_and_packages.yml
@@ -10,7 +10,7 @@
   # openshift_repos is also skipped (this is the case at least for Ansible
   # 2.0.2)
   - openshift_facts
-  - role: rhel_subscribe
+  - role: subscription-manager
     when: deployment_type in ["enterprise", "atomic-enterprise", "openshift-enterprise"] and
           ansible_distribution == "RedHat" and
           lookup('oo_option', 'rhel_skip_subscription') | default(rhsub_skip, True) |
