--- a/playbooks/common/openshift-cluster/tasks/set_master_launch_facts.yml
+++ b/playbooks/common/openshift-cluster/tasks/set_master_launch_facts.yml
@@ -3,7 +3,7 @@
 
 - name: Generate master instance names(s)
   set_fact:
-    scratch_name: "{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' | format(1048576 | random) }}"
+    scratch_name: "{{ k8s_type }}-{{ '%05x' | format(1048576 | random) }}.{{ cluster_id }}"
   register: master_names_output
   with_sequence: count={{ num_masters }}
 
