--- a/playbooks/aws/openshift-cluster/config.yml
+++ b/playbooks/aws/openshift-cluster/config.yml
@@ -36,6 +36,8 @@
     openshift_master_identity_providers: [{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
     # Defining htpasswd users
     openshift_master_htpasswd_users: {'andrew': '$apr1$0aZ/aa/d$azp3k9Ru7JQcdiB8.XLQm0', 'marina': '$apr1$I6fRsfIu$/lgUEJ7LwE29lUdLugZZT.'}
+    openshift_master_cluster_public_hostname: 'master.{{cluster_id}}.{{zone}}'
+    openshift_master_default_subdomain: "apps-1.{{ cluster_id }}.{{ zone }}"
     os_sdn_network_plugin_name: "{{ lookup('oo_option', 'sdn_network_plugin_name') }}"
     openshift_use_flannel: "{{ lookup('oo_option', 'use_flannel') }}"
     openshift_use_fluentd: "{{ lookup('oo_option', 'use_fluentd') }}"
