--- a/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
+++ b/playbooks/aws/openshift-cluster/tasks/launch_instances.yml
@@ -129,7 +129,7 @@
   with_items: "{{ enis.results }}"
   when: enis.changed == true
 
-- name: create dns names based on eips and dns_names fact
+- name: create dns names based on eips and instance names
   route53:
     command: create
     zone: "{{ zone }}"
@@ -147,7 +147,7 @@
   route53:
     command: create
     zone: "{{ zone }}"
-    record: "*.apps-{{item.1}}.{{ cluster_id }}.{{zone}}"
+    record: "*.apps-{{ item.1 }}.{{ cluster_id }}.{{ zone }}"
     type: A
     ttl: 60
     value: "{{ item.0.public_ip }}"
@@ -156,6 +156,20 @@
     - "{{eips.results}}"
     - "{{eips.results | length}}"
   when: host_type == "node" and sub_host_type == "infra"
+
+- name: create master dns entries for infra nodes
+  route53:
+    command: create
+    zone: "{{ zone }}"
+    record: "master-{{ item.1 }}.{{ cluster_id }}.{{ zone }}"
+    type: A
+    ttl: 60
+    value: "{{ item.0.public_ip }}"
+    wait: yes
+  with_together:
+    - "{{eips.results}}"
+    - "{{eips.results | length}}"
+  when: host_type == "master"
 
 - set_fact:
     instance_groups: >
