--- a/playbooks/common/openshift-master/scaleup.yml
+++ b/playbooks/common/openshift-master/scaleup.yml
@@ -58,4 +58,6 @@
 
 - include: ../openshift-master/config.yml
 
+- include: ../openshift-loadbalancer/config.yml
+
 - include: ../openshift-node/config.yml
