this addresses the potential IP allocation issue for CIL-410
The assumptions of this fix is that there are no more than 19 nodes of each type,
and that  the nodes are installed into an empty subnet

--- a/playbooks/common/openshift-cluster/tasks/set_etcd_launch_facts.yml
+++ b/playbooks/common/openshift-cluster/tasks/set_etcd_launch_facts.yml
@@ -14,7 +14,7 @@
 
 - name: Generate etcd instance private ips·
   set_fact:
-    scratch_name: "{{ private_subnet }}.{{ 255 | random(1,1) }}" 
+    scratch_name: "{{ private_subnet }}.{{ item | int + 60 }}" 
   register: etcd_ips_output
   with_sequence: count={{ num_etcd }}
 
