--- a/playbooks/common/openshift-cluster/tasks/set_master_launch_facts.yml
+++ b/playbooks/common/openshift-cluster/tasks/set_master_launch_facts.yml
@@ -14,7 +14,7 @@
 
 - name: Generate master instance private ips
   set_fact:
-    scratch_name: "{{ private_subnet }}.{{ 255 | random(1,1) }}"
+    scratch_name: "{{ private_subnet }}.{{ item | int + 20 }}"
   register: master_ips_output
   with_sequence: count={{ num_masters }}
 
