this removes the need to set region twice

--- a/playbooks/aws/openshift-cluster/vars.yml
+++ b/playbooks/aws/openshift-cluster/vars.yml
@@ -5,7 +5,7 @@ deployment_rhel7_ent_base:
   # rhel-7.1, requires cloud access subscription
   image: "{{ lookup('oo_option', 'ec2_image') | default('ami-10251c7a', True) }}"
   image_name: "{{ lookup('oo_option', 'ec2_image_name') | default(None, True) }}"
-  region: "{{ lookup('oo_option', 'ec2_region') | default('us-east-1', True) }}"
+  region: "{{ lookup('oo_option', 'AWS_REGION') | default('us-east-1', True) }}"
   ssh_user: ec2-user
   become: yes
   keypair: "{{ lookup('oo_option', 'ec2_keypair') | default('libra', True) }}"
@@ -19,7 +19,7 @@ deployment_vars:
     # centos-7, requires marketplace
     image: "{{ lookup('oo_option', 'ec2_image') | default('ami-6d1c2007', True) }}"
     image_name: "{{ lookup('oo_option', 'ec2_image_name') | default(None, True) }}"
-    region: "{{ lookup('oo_option', 'ec2_region') | default('us-east-1', True) }}"
+    region: "{{ lookup('oo_option', 'AWS_REGION') | default('us-east-1', True) }}"
     ssh_user: centos
     become: yes
     keypair: "{{ lookup('oo_option', 'ec2_keypair') | default('libra', True) }}"
