CIL-414: Introduces an ansible external variable openshift_persist_registry
this controls that:
1. ec2 instance userdata for infra nodes optionally creates a directory with the correct permissions via oadm
2. the master set up the registry in scc and  creates/modifies the docker registry pod

--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -311,3 +311,11 @@
     owner: "{{ item }}"
     group: "{{ 'root' if item == 'root' else _ansible_ssh_user_gid.stdout  }}"
   with_items: "{{ client_users }}"
+
+- name: Set up registry on the infra node if openshift_psersist_registry is defined and true step 1 (add registry to scc)
+  command: 'oadm policy add-scc-to-user privileged system:serviceaccount:default:registry'
+  when: openshift_persist_registry is defined and openshift_persist_registry | bool
+
+- name: Set up registry on the infra node if openshift_psersist_registry is defined and true step 2 (create docker-registry with persistent volume definition)
+  command: "oadm registry --service-account=registry --config={{ openshift.common.config_base }}/master/admin.kubeconfig --images='registry.access.redhat.com/openshift3/ose-${component}:${version}' --mount-host=/mnt/registry --selector='type=infra'"
+  when: openshift_persist_registry is defined and openshift_persist_registry | bool
