CIL-364 making sure playbooks run in tower
had to parametrize AWS region instead of getting it from the environment

--- a/playbooks/aws/openshift-cluster/tasks/create_security_group.yml
+++ b/playbooks/aws/openshift-cluster/tasks/create_security_group.yml
@@ -6,7 +6,8 @@
 - name: Create security group for ose
   ec2_group:
     name: "{{ security_group }}"
-    description: "{{ security_group }}" 
+    description: "{{ security_group }}"
+    region: "{{ deployment_vars[deployment_type].region }}"
     rules:
       - proto: tcp
         from_port: 80
