--- a/playbooks/aws/openshift-cluster/terminate.yml
+++ b/playbooks/aws/openshift-cluster/terminate.yml
@@ -85,6 +85,7 @@
     - name: Remove eip(s)
       ec2_eip:
         state: absent
+        region: "{{ hostvars[item]['ec2_region'] }}"
         ip: "{{ hostvars[item]['ec2_ip_address'] }}"
       with_items: "{{ groups.oo_hosts_to_terminate }}"
       when: "'oo_hosts_to_terminate' in groups"
@@ -123,8 +124,10 @@
       with_items: "{{ ec2_stop.results }}"
       when: ec2_stop | changed
 
-    - name: Remove security group
+    - name: Remove security group (a failure is okay)
+      ignore_errors: yes 
       ec2_group:
         name: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
+        region: "{{ hostvars[item]['ec2_region'] }}"
         description: "{{ lookup('oo_option', 'ec2_security_groups') | default([ 'public' ], True) }}"
         state: absent
