Ensure etcd user exists in etcd_server_certificates by installing etcd.

--- a/roles/etcd_server_certificates/tasks/main.yml
+++ b/roles/etcd_server_certificates/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Install etcd
+  action: "{{ ansible_pkg_mgr }} name=etcd state=present"
+  when: not etcd_is_containerized | bool
+
 - name: Check status of etcd certificates
   stat:
     path: "{{ etcd_cert_config_dir }}/{{ item }}"
