--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -48,6 +48,11 @@
   - set_fact:
       openshift_hosted_metrics_resolution: "{{ lookup('oo_option', 'openshift_hosted_metrics_resolution') | default('10s', true) }}"
     when: openshift_hosted_metrics_resolution is not defined
+
+  - set_fact:
+      openshift_hosted_logging_deploy: "{{ lookup('oo_option', 'openshift_hosted_logging_deploy') | default(false, true) }}"
+    when: openshift_hosted_logging_deploy is not defined
+
   roles:
   - openshift_facts
   post_tasks:
